Update Angular configuration and add deployment support; increase component style size limits, add new button route, and include angular-cli-ghpages for deployment.

--- a/angular.json
+++ b/angular.json
@@ -43,9 +43,9 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
-                }
+                  "maximumWarning": "20kB",
+                  "maximumError": "30kB"
+                }                
               ],
               "outputHashing": "all"
             },
@@ -71,6 +71,9 @@
         },
         "test": {
           "builder": "@angular/build:unit-test"
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
