--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/compiler-cli": "^21.1.0",
     "@angular/localize": "^21.1.0",
     "@ng-bootstrap/ng-bootstrap": "^20.0.0",
+    "angular-cli-ghpages": "^3.0.2",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
     "vitest": "^4.0.8"
